classDiagram

class ArtworkDataHelper {
  - ArtworkManager artworkManager
  + __construct(ArtworkManager artworkManager)
  + handleAction(action)
  - handleAddArtwork()
  - handleUpdateArtwork()
  - handleDeleteArtwork()
}

class Database {
  - PDO connection
  + connect()
  + getConnection()
}

class Artwork {
  - int id
  - string title
  - string author
  - string imagePath
  - text description
  + __construct()
}

class ArtworkDbTable {
  - Database db
  + findAll()
  + findById(id)
  + create(artwork)
  + update(artwork)
  + delete(id)
}

class ArtworkManager {
  - ArtworkDbTable model
  - Verification verifier
  + fetchAll()
  + getArtwork(id)
  + create()
  + update(id)
  + delete(id)
}

class Verification {
  + verifyImage(file)
  + verifyText(text)
}

Database --> ArtworkDbTable
ArtworkDbTable --> Artwork
ArtworkManager --> ArtworkDbTable
ArtworkManager --> Verification
ArtworkDataHelper --> ArtworkManager